# Knapsack-Problem

./: BranchNBound.c  BruteForce.c  BruteForceAlwaysPresent.c  BruteForceAlwaysPresent.h  CMakeLists.txt  Knapsack.h  PriceDecomposition.c  PriceToWeightRatio.c  main.c  main.h
Data/: expEvalBig.sh  expEvalSmall.sh  knap_10.inst.dat.out  knap_15.inst.dat.out  knap_20.inst.dat.out  knap_22.inst.dat.out  knap_25.inst.dat.out  knap_27.inst.dat.out  knap_30.inst.dat.out  knap_32.inst.dat.out  knap_35.inst.dat.out  knap_37.inst.dat.out  knap_4.inst.dat.out  knap_40.inst.dat.out  knapgenerrs  maxCostEval.sh  maxWeightEval.sh  measure.sh  ratioEval.sh  relerrs.sh
doc/1/: Knapsack1.aux  Knapsack1.out  Knapsack1.pgf-plot.gnuplot  Knapsack1.pgf-plot.table  Knapsack1.tex
doc/3/: main.tex
doc/3/exp/big/: BranchNBound  BruteForce  PriceDecomposition  PriceToWeightRatio  PriceToWeightRatio.relerrs
doc/3/exp/small/: BranchNBound  BruteForce  PriceDecomposition  PriceToWeightRatio  PriceToWeightRatio.relerrs
doc/3/maxCost/: BranchNBound  BruteForce  PriceDecomposition  PriceToWeightRatio  PriceToWeightRatio.relerrs
doc/3/maxWeight/: BranchNBound  BruteForce  PriceDecomposition  PriceToWeightRatio  PriceToWeightRatio.relerrs
doc/3/ratio/: BranchNBound  BruteForce  PriceDecomposition  PriceToWeightRatio  PriceToWeightRatio.relerrs
knapgen/: knapcore.c  knapgen.c
